--- a/src/features/orderBook/OrderBook.scss
+++ b/src/features/orderBook/OrderBook.scss
@@ -38,6 +38,7 @@ body{
 .container {
   border: 1px solid #19232a;
   box-shadow: none!important;
+  width: 800px;
   .book_header{
     border-bottom: 1px solid rgba(100, 100, 100, 0.3);
     cursor: pointer;
@@ -48,7 +49,7 @@ body{
     flex-direction: row;
     justify-content: space-between;
     font-size: 11px;
-    padding: 0 0 0 5px;
+    padding: 0 10px 0 10px;
     .icon{
       display: inline-block;
       width: 30px;
