redux persist implemented

--- a/src/features/orderBook/OrderBook.scss
+++ b/src/features/orderBook/OrderBook.scss
@@ -39,6 +39,7 @@ body{
   border: 1px solid #19232a;
   box-shadow: none!important;
   width: 800px;
+  overflow: hidden;
   .book_header{
     border-bottom: 1px solid rgba(100, 100, 100, 0.3);
     cursor: pointer;
